trying to fix dark mode bug on mobile

--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -469,7 +469,7 @@ b, strong {
   }
 
   .color-mode {
-    display: none;
+    display: list-item;
   }
 
   .about-image {
